tests/bad/member_on_string.td
/// fail: Can't set member on object of type string

let x = "hello"
x.y = 10